--- a/src/styles/custom.scss
+++ b/src/styles/custom.scss
@@ -1,1 +1,133 @@
 /* Place your custom SCSS in HUGO_SITE_FOLDER/assets/scss/custom.scss */
+:root {
+    --body-background: #f5f5fa;
+
+    --accent-color: #34495e;
+    --accent-color-darker: #2c3e50;
+    --accent-color-text: #fff;
+    --body-text-color: #707070;
+
+    --tag-border-radius: 4px;
+
+    --section-separation: 40px;
+
+    --scrollbar-thumb: hsl(0, 0%, 85%);
+    --scrollbar-track: var(--body-background);
+
+    &[data-scheme="dark"] {
+        --body-background: #232532;
+        --accent-color: #ecf0f1;
+        --accent-color-darker: #c1bdc7;
+        --accent-color-text: #000;
+        --body-text-color: rgba(255, 255, 255, 0.7);
+        --scrollbar-thumb: hsl(0, 0%, 40%);
+        --scrollbar-track: var(--body-background);
+    }
+}
+
+:root {
+    --card-background: #fff;
+    --card-background-selected: #eaeaea;
+    --card-background-color-purple: rgba(0.49, 0.31, 275.75, 0.1);
+
+    --card-text-color-main: #000;
+    --card-text-color-secondary: #747474;
+    --card-text-color-tertiary: #767676;
+    --card-text-color-purple: rgba(0.49, 0.31, 275.75, 0.8);
+
+    --card-separator-color: rgba(218, 218, 218, 0.5);
+
+    --card-border-radius: 5px;
+
+    --card-padding: 20px;
+
+    @include respond(md) {
+        --card-padding: 25px;
+    }
+
+    @include respond(xl) {
+        --card-padding: 30px;
+    }
+
+    --small-card-padding: 25px 20px;
+
+    @include respond(md) {
+        --small-card-padding: 25px;
+    }
+
+    &[data-scheme="dark"] {
+        --card-background: #2b2e3b;
+        --card-background-selected: rgba(255, 255, 255, 0.16);
+        --card-background-color-purple: rgb(146, 144, 195);
+        --card-text-color-main: rgba(255, 255, 255, 0.9);
+        --card-text-color-secondary: rgba(255, 255, 255, 0.7);
+        --card-text-color-tertiary: rgba(255, 255, 255, 0.5);
+        --card-text-color-purple: rgba(0.49, 0.31, 275.75, 0.6);
+        --card-separator-color: rgba(255, 255, 255, 0.12);
+    }
+}
+
+/*
+*   Article content style
+*/
+:root {
+    --blockquote-border-size: 4px;
+    --blockquote-background-color: rgb(248 248 248);
+
+    --heading-border-size: 4px;
+
+    --link-background-color: 189, 195, 199;
+    --link-background-opacity: 0.5;
+    --link-background-opacity-hover: 0.7;
+
+    --pre-background-color: #222531;
+    --pre-text-color: #f8f8f2;
+
+    --code-background-color: rgba(0, 0, 0, 0.12);
+    --code-text-color: #808080;
+
+    --table-border-color: #dadada;
+    --tr-even-background-color: #efefee;
+
+    --kbd-border-color: #dadada;
+
+    &[data-scheme="dark"] {
+        --code-background-color: #59607d;
+        --code-text-color: rgba(8, 5, 5, 0.9);
+
+        --table-border-color: #717171;
+        --tr-even-background-color: #545454;
+
+        --blockquote-background-color: #353847;
+    }
+    --code-font-family: Menlo, Monaco, Consolas, "Courier New", var(--zh-font-family), monospace;
+}
+
+.container {
+    &.extended {
+        @include respond(md) {
+            max-width: 1024px;
+            --left-sidebar-max-width: 25%;
+            --right-sidebar-max-width: 30%;
+        }
+
+        @include respond(lg) {
+            max-width: 1280px;
+            --left-sidebar-max-width: 20%;
+            --right-sidebar-max-width: 30%;
+        }
+
+        @include respond(xl) {
+            // max-width: 1536px;
+            max-width: max(70%, 1536px);
+            --left-sidebar-max-width: min(230px, 15%); // 15%;
+            --right-sidebar-max-width: min(384px, 25%); // 25%;
+        }
+    }
+}
+
+.article-content pre {
+    font-size: 0.8em;
+    line-height: 1.3em;
+}
+
